--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <h1>Portofolio Saya</h1>
     </header>
     <nav>
-        <!-- Tambahkan menu navigasi di sini -->
+        <!-- Tambahkan menu navigasi di sini -->nama saya elmansyah 
     </nav>
     <main>
-        <!-- Tambahkan konten portofolio Anda di sini -->
+        <!-- Tambahkan konten portofolio Anda di sini -->dipanggil boel 
     </main>
     <footer>
-        <!-- Tambahkan footer Anda di sini -->
+        <!-- Tambahkan footer Anda di sini -->dipangil nengok 
     </footer>
 </body>
 </html>
