--- a/index.html
+++ b/index.html
@@ -10,14 +10,23 @@
     <header>
         <h1>Portofolio Saya</h1>
     </header>
-    <nav>
-        <!-- Tambahkan menu navigasi di sini -->nama saya elmansyah 
-    </nav>
-    <main>
-        <!-- Tambahkan konten portofolio Anda di sini -->dipanggil boel 
-    </main>
+    <section class="about">
+        <h2>Tentang Saya</h2>
+        <p>Saya adalah seorang pengembang web yang berpengalaman.</p>
+    </section>
+    <section class="projects">
+        <h2>Proyek Saya</h2>
+        <div class="project">
+            <h3>Proyek 1</h3>
+            <p>Deskripsi proyek 1.</p>
+        </div>
+        <div class="project">
+            <h3>Proyek 2</h3>
+            <p>Deskripsi proyek 2.</p>
+        </div>
+    </section>
     <footer>
-        <!-- Tambahkan footer Anda di sini -->dipangil nengok 
+        <p>Kontak: email@example.com</p>
     </footer>
 </body>
 </html>
