--- a/elman.html
+++ b/elman.html
@@ -3,30 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Portofolio Saya</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f2f2f2;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            font-size: 36px;
+        }
+        nav {
+            text-align: center;
+            margin-top: 20px;
+        }
+        nav a {
+            text-decoration: none;
+            color: #333;
+            padding: 10px 20px;
+            margin: 0 10px;
+            background-color: #fff;
+            border-radius: 5px;
+        }
+        nav a:hover {
+            background-color: #555;
+            color: #fff;
+        }
+        section {
+            padding: 20px;
+        }
+        .project {
+            background-color: #fff;
+            padding: 20px;
+            margin: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+        .project h2 {
+            font-size: 24px;
+        }
+        .project p {
+            font-size: 16px;
+        }
+    </style>
 </head>
 <body>
     <header>
         <h1>Portofolio Saya</h1>
+        <nav>
+            <a href="#about">Tentang Saya</a>
+            <a href="#projects">Proyek</a>
+            <a href="#contact">Kontak</a>
+        </nav>
     </header>
-    <section class="about">
+    <section id="about">
         <h2>Tentang Saya</h2>
-        <p>Saya adalah seorang pengembang web yang berpengalaman.</p>
+        <p>Selamat datang di portofolio saya. Saya adalah seorang pengembang web yang masih belajar.</p>
     </section>
-    <section class="projects">
-        <h2>Proyek Saya</h2>
+    <section id="projects">
+        <h2>Proyek</h2>
         <div class="project">
-            <h3>Proyek 1</h3>
-            <p>Deskripsi proyek 1.</p>
+            <h2>Proyek 1</h2>
+            <p>Ini adalah deskripsi singkat tentang Proyek 1 saya. Saya menggunakan HTML, CSS, dan JavaScript untuk mengembangkan proyek ini.</p>
         </div>
         <div class="project">
-            <h3>Proyek 2</h3>
-            <p>Deskripsi proyek 2.</p>
+            <h2>Proyek 2</h2>
+            <p>Ini adalah deskripsi singkat tentang Proyek 2 saya. Proyek ini melibatkan pengembangan aplikasi web yang kompleks.</p>
         </div>
     </section>
-    <footer>
-        <p>Kontak: email@example.com</p>
-    </footer>
+    <section id="contact">
+        <h2>Kontak</h2>
+        <p>Jika Anda tertarik bekerja sama dengan saya, silakan hubungi saya melalui email di eelmansyah118@gmail.com.</p>
+    </section>
 </body>
 </html>
